@@ -10,17 +10,17 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
  * RecentNoticeService
  * -------------------------------------------------
- * 홈 화면의 "최근 게시물" 데이터를 통합 조회하는 서비스
- * - 주거(LH·SH) + 정책 데이터를 통합 정렬
- * - 금융 공고는 게시일이 없어 제외
+ * 홈 화면의 "최근 게시물" 통합 조회 서비스
+ * - 전체: 주거 + 정책 최신 5개
+ * - 주거: LH + SH 최신 5개
+ * - 정책: 정책 최신 5개
  */
 @Service
 @RequiredArgsConstructor
@@ -30,17 +30,9 @@ public class RecentNoticeService {
     private final ShAnnouncementRepository shRepo;
     private final YouthPolicyRepository policyRepo;
 
-    /**
-     * 최신 게시물 통합 조회
-     * -------------------------------------------------
-     * ① LH 공고 (게시일 기준)
-     * ② SH 공고 (게시일 기준)
-     * ③ 청년정책 (시작일 기준)
-     * → 통합 정렬 후 상위 N개 반환
-     */
-    public List<RecentNoticeDto> getRecentNotices() {
+    public Map<String, List<RecentNoticeDto>> getRecentNotices() {
 
-        // LH 공고: 게시일 기준 내림차순 정렬 후 상위 5건
+        // LH 공고
         var lhList = lhRepo.findTop20ByOrderByPanNtStDtDesc()
                 .stream()
                 .map(RecentNoticeDto::fromLh)
@@ -49,7 +41,7 @@ public class RecentNoticeService {
                 .limit(5)
                 .toList();
 
-        // SH 공고: 게시일(postDate) 기준 내림차순 정렬 후 상위 5건
+        // SH 공고
         var shList = shRepo.findTop20ByOrderByPostDateDesc()
                 .stream()
                 .map(RecentNoticeDto::fromSh)
@@ -58,26 +50,34 @@ public class RecentNoticeService {
                 .limit(5)
                 .toList();
 
-        // 청년정책: 오늘 이후 종료되지 않은 정책 중 시작일 최신순 상위 5건
+        // 청년정책
         var todayStr = LocalDate.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"));
         var policyList = policyRepo.findActiveOrderByStartDateDesc(todayStr, PageRequest.of(0, 100))
                 .stream()
-                .map(RecentNoticeDto::fromPolicy)  // 내부에서 end<today 필터링됨
+                .map(RecentNoticeDto::fromPolicy)
                 .filter(Objects::nonNull)
                 .sorted(Comparator.comparing(RecentNoticeDto::getCreatedAt).reversed())
                 .limit(5)
                 .toList();
 
-        // 통합 리스트 생성: (LH + SH + 정책)
-        return Stream.of(lhList, shList, policyList)
-                .flatMap(List::stream)
-                .filter(Objects::nonNull)
-                .filter(dto -> dto.getCreatedAt() != null)
-                .sorted(Comparator.comparing(
-                        RecentNoticeDto::getCreatedAt,
-                        Comparator.nullsLast(Comparator.naturalOrder())
-                ).reversed())
-                .limit(5) // 전체 상위 5건만 노출
-                .toList();
+        // 주거 = LH + SH 통합 후 최신순 5개
+        var housingList = Stream.concat(lhList.stream(), shList.stream())
+                .sorted(Comparator.comparing(RecentNoticeDto::getCreatedAt).reversed())
+                .limit(5)
+                .collect(Collectors.toList());
+
+        // 전체 = 주거 + 정책 통합 후 최신순 5개
+        var allList = Stream.concat(housingList.stream(), policyList.stream())
+                .sorted(Comparator.comparing(RecentNoticeDto::getCreatedAt).reversed())
+                .limit(5)
+                .collect(Collectors.toList());
+
+        // 카테고리별 리스트를 Map으로 반환
+        Map<String, List<RecentNoticeDto>> result = new HashMap<>();
+        result.put("all", allList);
+        result.put("housing", housingList);
+        result.put("policy", policyList);
+
+        return result;
     }
 }
